--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,14 @@
           <target>1.6</target>
         </configuration>
       </plugin>
+      <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
     </plugins>
   </build>
+  <dependencies>
+  	<dependency>
+	    <groupId>org.slf4j</groupId>
+	    <artifactId>slf4j-api</artifactId>
+	    <version>1.6.2</version>
+	</dependency>
+  </dependencies>
 </project>
