--- a/pom.xml
+++ b/pom.xml
@@ -25,5 +25,11 @@
 	    <artifactId>slf4j-api</artifactId>
 	    <version>1.6.2</version>
 	</dependency>
+	<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
+	<dependency>
+	    <groupId>org.apache.poi</groupId>
+	    <artifactId>poi</artifactId>
+	    <version>3.15</version>
+	</dependency>
   </dependencies>
 </project>
